--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,51 +51,6 @@ jobs:
           go-version: 1.13.4
       - run: |
           go build -race  ./...
-  test:
-    name: test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
-        with:
-          go-version: 1.13.4
-      - name: Install gotestsum
-        run: go get gotest.tools/gotestsum@v0.4.0
-      - name: Run tests
-        run: |
-          eval $(go env)
-          mkdir -p ~/junit/
-          ${GOPATH}/bin/gotestsum --junitfile ~/junit/unit-tests.xml -- -race -short $(go list ./...)
-  test-win:
-    name: test-win
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
-        with:
-          go-version: 1.13.4
-      - name: Install gotestsum
-        run: go get gotest.tools/gotestsum@v0.4.0
-      - name: Run tests
-        run: |
-          $env:Path += ";$(go env GOPATH)\bin"
-          mkdir $home/junit
-          gotestsum --junitfile $home\junit\unit-tests.xml -- -race -short $(go list .\...)
-  test-osx:
-    name: test-osx
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v1
-        with:
-          go-version: 1.13.4
-      - name: Install gotestsum
-        run: go get gotest.tools/gotestsum@v0.4.0
-      - name: Run tests
-        run: |
-          eval $(go env)
-          mkdir -p ~/junit/
-          ${GOPATH}/bin/gotestsum --junitfile ~/junit/unit-tests.xml -- -race -short $(go list ./...)
   golangci-lint:
     name: golangci-lint
     runs-on: ubuntu-latest
@@ -217,7 +172,7 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build
-      - test
+      - docker
     if: github.actor == 'nsmbot' && github.base_ref == 'master' && github.event_name == 'pull_request'
     steps:
       - name: Check out the code
