--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           go-version: 1.13.4
       - name: Build container
-        run: docker build .
+        run: docker build . -t "${ORG}/memory-registry:${TAG}"
       - name: Push coredns image
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
           docker push "${ORG}/memory-registry:${TAG}"
