--- a/.github/workflows/docker-push.yaml
+++ b/.github/workflows/docker-push.yaml
@@ -19,9 +19,9 @@ jobs:
       - uses: actions/setup-go@v1
         with:
           go-version: 1.13.4
-      - name: Build container
-        run: docker build . -t "${ORG}/memory-registry:${TAG}"
-      - name: Push coredns image
+      - name: Build memory-registry image
+        run: docker build . -t "${ORG}/memory-registry:${TAG}" --target runtime
+      - name: Push memory-registry image
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
           docker push "${ORG}/memory-registry:${TAG}"
